# vmr2tei

./: README.md  pyproject.toml
vmr2tei/: __init__.py  collation.py  common.py  main.py  reading.py  variation_unit.py  vmr2tei.py  witness.py
