[tool.poetry]
name = "vmr2tei"
version = "0.1.0"
description = "Converts XML data from the INTF Virtual Manuscript Room API to TEI XML"
authors = ["Joey McCollum"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jjmccollum/vmr2tei"
repository = "https://github.com/jjmccollum/vmr2tei"
documentation = "https://jjmccollum.github.io/vmr2tei/"
keywords = ["Python", "phylogenetics", "text encoding", "TEI", "NEXUS"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.1"
typer = "^0.6.1"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
Sphinx = "^5.1.1"
pytest = "^7.1.2"
coverage = "^6.4.4"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.15.0"
sphinx-copybutton = "^0.4.0"
black = "^22.3.0"
sphinxcontrib-bibtex = "^2.4.1"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}

[tool.black]
line-length = 120
skip_string_normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vmr2tei = "vmr2tei.main:app"